--- a/index.html
+++ b/index.html
@@ -27,23 +27,53 @@
         <![endif]-->
 
     <section class="wrapper">
+        <!--added header-->
+        <header>
+            <h1>Hi. I'm Elizabeth.</h1>
+        </Header>
+        <main>
+            <p>I am a <span>Student</span> learning to code who thrives on learning. When I'm not studying, I
+                can be found enjoying time with family, friends, and Ozzie, my cattle dog, or strength training at the
+                gym.
+            </p>
+        </main>
         <div class="div-1">
-            <p><span>Lorem ipsum</span> dolor sit amet, consectetur adipiscing elit. Morbi bibendum quam quis nibh
-                porttitor laoreet.
-                Nullam vitae elit eget felis porttitor pharetra.
+            <p>I was born and raised in the Bay Area in Northern California. <span>My roots are</span> based in San Jose today.
+                Although I
+                enjoy traveling in the Unitied States and abroad, I'm fortunate to have so many wonderful things to do
+                in my area!
             </p>
         </div>
         <div class="div-2">
-            <p>Ut rhoncus tincidunt turpis, <span>sed luctus lacus</span> finibus blandit. Suspendisse scelerisque
-                congue ligula, vel
-                imperdiet mauris placerat id. Etiam non justo lacus.
+            <p><span>My passion is Cooking!</span> - it's one of the most wonderful ways to connect with family and
+                friends. I
+                balance it out with lots of activity and exercise with my sweet cattle dog!
             </p>
         </div>
         <div class="div-3">
-            <p>Ut sapien libero, tincidunt vitae blandit nec, tristique vel nisi. Morbi tempus nisl sed eros
-                <span>pharetra maximus.</span>
+            <p><span>A fun fact:</span> Three years ago, I started to strength train. I'm slightly embarrased to say
+                that I didn't have a clue how to do it. Now, I'm able to complete
+                the major lifts. The lesson is that it's never to late to start and learn something new!
             </p>
         </div>
+        <!--added footer-->
+        <footer>
+            <div>
+                <p> <a href="http://www.twitter.com/home" target="_blank"><img src="img/twitter.png"
+                            alt="Twitter icon"></a></li>
+                </p>
+            </div>
+            <div>
+                <p><a href="http://www.facebook.com" target="_blank"><img src="img/facebook.png"
+                            alt="Facebook icon"></a>
+                </p>
+            </div>
+            <div>
+                <p><a href="http://instagram.com" target="_blank"><img src="img/instagram.png" alt="Instagram icon"></a>
+                </p>
+            </div>
+        
+        </footer>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
